== Git

* Lean on cucumber.yml to define cucumber tasks.
* Lean on spec.test_files and Gem::Validator to run tests.
* Shoe::Tasks can now be used a la carte.

== 0.4.0

* Don't generate the gemspec; *use* it instead.

== 0.3.0 and before

(I need to spelunk through `git log` to be coherent here.)