@@ -1,4 +1,4 @@
 #!/usr/bin/env ruby
 
 require 'shoe'
-Shoe::Generator.new.run
+Shoe::Generator.new(*ARGV).run
