@@ -3,6 +3,7 @@
 * Lean on cucumber.yml to define cucumber tasks.
 * Lean on spec.test_files and Gem::Validator to run tests.
 * Shoe::Tasks can now be used a la carte.
+* The shoe generator script now requires a path argument.
 
 == 0.4.0
 
